HighContrast: fix insensitive labels
Make insensitive labels differerent from regular labels.

https://bugzilla.gnome.org/show_bug.cgi?id=746493

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -143,13 +143,16 @@
   }
 }
 
-GtkLabel {
+.label {
   &:selected,
   &:selected:focus,
   &:selected:hover,
   &:backdrop:selected {
     @extend %selected_items;
   }
+ &:insensitive {
+   color: $insensitive_fg_color;
+ }
 }
 
 /*********************
